@@ -1,3 +1,10 @@
+2007-03-10  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* foomatic-rip.in: Replaced sysread() and syswrite() by read() and
+	  print() as sysread() and syswrite() is not compatible with the
+	  read() and print() of the other operations. See Ubuntu bug #87597
+	  (https://launchpad.net/bugs/87597).
+
 2007-02-20  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* foomatic-rip.in: Fixed problem of too high memory consumption
